r373 (13. 02. 2026):
Updated to U242.1

r372 (01. 02. 2026):
Added "Infiltrator - OVERDOG" buff option
Floats: Fixed a possible crash when you are taken into custody or quit the game

r371 (28. 01. 2026):
Fixed a possible crash that could happen after updating EHI in-game and then loading a heist

r370 (13. 01. 2026):
Replaced buff option "Hostage Taker / Muscle" with "Health Regen Delay"
Civilians Tracker: Disabled in Rats Day 2, Firestarter Day 1 and The Biker Heist Day 2
Civilians Tracker: Cached result of tracker visibility to improve mission load speed
Drama Tracker: Disabled in The Biker Heist Day 2
Health Regen Buff: Fixed other icons not properly colored
Health Regen Buff: Fixed incorrect icon on spawn when you have Muscle only equipped
Health Regen Buff: Fixed incorrect health regen value on spawn when you have Muscle only equipped
Health Regen Buff: Fixed an issue where health regen value do not get updated when switched from Hostage Taker to Muscle and vice versa

r369 (11. 01. 2026):
Buffs: Fixed an issue where some buffs do not have icon properly centered
Damage Absorption Buff: Fixed a rounding issue
Text Float: Text for Bodybags will load only if stealth is available
Text Float: Fixed an issue where floats for single grenades are visible if you do not have grenades equipped and option is enabled

r368 (04. 01. 2026):
Health Float: Fixed a very rare engine crash that sometimes returns number instead of Unit when aimed at

r367 (03. 01. 2026):
Fixed a case where disabled objects in the world are not properly cached (client only)
Missions that respawns loot from previous day (escape or trade) will reuse number of secured of loot (if available) without checking it again
Save data are persistent across game loads; reduces a file reload needed from the drive
Reworked counting of loot in trackers and waypoint
Mission Briefing: Fixed a case of incorrect secured lootbags in Day 1 in Watchdogs Day 2 and Framing Frame Day 2